tests/ui/type-inference/ambiguous-into-arg-projection-multi.stderr
error[E0282]: type annotations needed for `Option<&_>`
  --> $DIR/ambiguous-into-arg-projection-multi.rs:18:9
   |
LL |     let x = if true { a.get(0u8.into()) } else { b.get(0u8.into()) };
   |         ^
...
LL |         if let Some(_f) = y.f {}
   |                           --- type must be known at this point
   |
help: consider giving `x` an explicit type, where the placeholder `_` is specified
   |
LL |     let x: Option<&_> = if true { a.get(0u8.into()) } else { b.get(0u8.into()) };
   |          ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
